feat(keycloak): add keycloak plugin with token path

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,16 @@ PORT=
 # Debug: debug
 # Test: test
 GIN_MODE=
+
+# MySQL
+MYSQL_HOST=
+MYSQL_NAME
+MYSQL_USER=
+MYSQL_PASSWORD=
+
+# Keycloak
+KEYCLOAK_REALM=
+KEYCLOAK_BASE=
+KEYCLOAK_CLIENT_ID=
+KEYCLOAK_CLIENT_NAME=
+KEYCLOAK_CLIENT_SECRET=
