docs: add mysql dsn to env example

--- a/.env.example
+++ b/.env.example
@@ -7,14 +7,10 @@ PORT=
 GIN_MODE=
 
 # MySQL
-MYSQL_HOST=
-MYSQL_NAME
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_DSN=user:pass@tcp(host:port)/db
 
 # Keycloak
-KEYCLOAK_REALM=
 KEYCLOAK_BASE=
+KEYCLOAK_REALM=
 KEYCLOAK_CLIENT_ID=
-KEYCLOAK_CLIENT_NAME=
 KEYCLOAK_CLIENT_SECRET=
